# Sensory-L2

./: main.py  pyproject.toml
data/: calibration.tsv  metal.tsv
tex/: Sy_L2_Burakowski_Cichewicz_Stawicki.tex  refs.bib
tex/plots/: zapiski.md
