[project]
name = "2-sensory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pandas-stubs>=3.0.3.260530",
    "scipy>=1.17.1",
    "scipy-stubs>=1.17.1.5",
    "uncertainties>=3.2.3",
]
